# eng-tester

./: .gitignore  Cargo.toml  README.md  appveyor.yml
res/: eng.org  eng_big.org  eng_min.org  eng_ult.org  english.org
src/: cli.rs  gui.rs  lib.rs  main.rs  ui.rs
