[package]
name = "eng_tester"
version = "0.1.0"
authors = ["Alexander Pateenok <pateenoc@gmail.com>"]
description = "Knowledge testing app from org-mode tables"
license = "GPL-3.0"

[dependencies]
rand = "0.5.0"
structopt = "0.2.8"
failure = "0.1.1"

[dependencies.cursive]
version = "0.8.2"
default-features = false
features = ["pancurses-backend"]
