[package]
name = "org_tester"
version = "0.1.0"
authors = ["Alexander Pateenok <pateenoc@gmail.com>"]
description = "Testing app on org-mode tables"
license = "GPL-3.0"

[features]
default = ["cursive"]

[dependencies]
rand = "0.5.5"
structopt = "0.2.10"
failure = "0.1.2"

[dependencies.cursive]
version = "0.9.0"
default-features = false
features = ["pancurses-backend"]
optional = true
