[package]
name = "org_tester"
version = "0.1.0"
authors = ["Alexander Pateenok <pateenoc@gmail.com>"]
description = "Testing app on org-mode tables"
license = "GPL-3.0"
edition = "2018"

[features]
default = ["cursive"]

[dependencies]
rand = "0.5.5"
structopt = "0.2.10"
failure = "0.1.2"

[dependencies.cursive]
version = "0.9.1"
default-features = false
features = ["pancurses-backend"]
optional = true
